# Unif2017

./: .gitignore  LICENSE  README.md  UnificationAlgorithm.cabal
Main/: AVMGU.hs  DAG.hs  Display.hs  Example.txt  Expression.hs  Flattening.hs  Main.hs  PermutationInstances.hs  Substitution.hs  UnificationContext.hs  UnificationProblem.hs
Main/Test/: AVMGUTest.hs  SubstitutionTest.hs
Main/Utilities/: CustomUtilities.hs  TestVars.hs
main/: AVMGU.hs  Compression.hs  Constraint.hs  DAG.hs  Decompression.hs  Equation.hs  Example.txt  Expression.hs  Flattening.hs  MMSEquation.hs  Permutation.hs  PermutationInstances.hs  ReductionRules.hs  Substitution.hs  UPIO.hs  UnificationProblem.hs
main/Parser/: Input.up  LanguageDefinition.txt  NLASParser.hs  NlasParser.hs  NlasPreParser.hs  Parser.info  Parser.y
main/Test/: AVMGUTest.hs  DecompressionTest.hs  FlatteningTest.hs  ParserTest.hs  TestMain.hs
main/Utilities/: CustomUtilities.hs  EquationUtilities.hs  TestUtilities.hs
main/test/: AVMGUTest.hs  TestMain.hs
