name: UnificationAlgorithm
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: y_d_k@live.de
synopsis: A unification algorithm for NLAS
category: Nominal Logic
author: Yunus David Kerem Kutz
extra-source-files:
    ChangeLog.md

Library
  Build-Depends:  base >=4.9 && <4.10,
                  parsec >=3.1,
                  text >=1.2,
                  split >=0.2.3,
                  containers >=0.5.7,
                  NoTrace,
                  extra >= 1.6.3
  Exposed-Modules: AVMGU,
                   Parser.NLASParser,
                   Expression,
                   Constraint,
                   Decompression,
                   DAG
  default-language: Haskell2010
  Hs-Source-Dirs:  Main Main/Utilities Main/Test Main/Parser

Executable UnificationAlgorithm
  Main-Is:         Main.hs
  Hs-Source-Dirs:  Main Main/Utilities Main/Test Main/Parser
  build-depends:
    base >=4 && <5,
    parsec >=3.1,
    text >=1.2,
    split >=0.2.3,
    containers >=0.5.7,
    NoTrace,
    extra >= 1.6.3
  default-language: Haskell2010



test-suite test-TestMain
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  build-depends:
      base >=4 && <5,
      parsec >=3.1,
      text >=1.2,
      HUnit >=1.3,
      tasty >=0.11,
      tasty-hunit >=0.9,
      split >=0.2.3,
      containers >=0.5.7,
      NoTrace,
      extra >= 1.6.3
  hs-source-dirs: Main Main/Utilities Main/Test Main/Parser
  default-language:  Haskell2010
